# tdd-python-demo

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test.md
.claude/: settings.local.json
.claude/tdd-guard/data/: instructions.md  modifications.json  test.json
docs/: youtube_channel_usage.md
specs/: SPEC.md  SPEC_CN.md  calculator.md  markdown_toc.md  youtube_channel.md  youtube_video.md
src/tdd_python_demo/: cli_calculator.py  cli_toc.py  toc.py
src/tdd_python_demo/youtube_api/: __init__.py  cli_channel.py  client.py  formatter.py
tests/: test_calculator.py  test_cli_calculator.py  test_cli_toc.py  test_client.py  test_e2e_cli.py  test_formatter.py  test_toc.py
tests/e2e/: __init__.py  test_cli_channel_e2e.py
tests/integration/: __init__.py
tests/unit/: test_cli_channel.py  test_client.py  test_project_structure.py
